--- a/backend/retro/templates/retro/board_detail.html
+++ b/backend/retro/templates/retro/board_detail.html
@@ -1,10 +1,10 @@
 {% block content %}
-  <h2>{{ board.name }} - Board Detail</h2>
-
-  <form method="post" action="{% url 'board_detail' unique_address=unique_address %}">
+  <h2>{{ board.name }}</h2>
+  <form method="post" action="">
     {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Submit Ticket</button>
+    {% for form in forms %}
+      {{ form.as_p }}
+    {% endfor %}
+    <button type="submit">Submit</button>
   </form>
-
 {% endblock %}
